@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.stofa.dk" version="1.0.1" name="Stofa web-tv" provider-name="twinther [tommy@winther.nu]">
+<addon id="plugin.video.stofa.dk" version="1.0.2" name="Stofa web-tv" provider-name="twinther [tommy@winther.nu]">
     <requires>
         <import addon="xbmc.python" version="2.0"/>
         <import addon="script.module.buggalo" version="1.1.2"/>
