@@ -1,3 +1,6 @@
+[B]Version 1.0.2 - 2012-12-25[/B]
+- Updated addon to match changes to website
+
 [B]Version 1.0.1 - 2012-10-22[/B]
 - Added buggalo url
 
